--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
             <i class="fas fa-phone-alt"></i>
           </span>
         </button>
-
       </div>
     </div>
   </nav>
+
+
+  <!-- Starting the Intro Section-->
 
   <!-- Including Bundle.Js-->
 
