--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   <title>R.L Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
 
   <!-- Starting the NavBar section -->
 
-  <nav class="navbar navbar-expand-lg navbar-dark menu">
+  <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="images/logo.png.png" alt="logo">
@@ -51,6 +55,34 @@
 
 
   <!-- Starting the Intro Section-->
+
+
+  <section id="home" class="intro-section">
+    <div class="container">
+      <div class="row align-item-center text-white">
+        <div class="col-md-6 intros">
+          <h1 class="display-2">
+            <span class="display-2--intro">Je suis Rafael Longeville</span>
+            <span class="display-2--description lh-base">En recherche active d'une entreprise innovante, je présente
+              quelques créations qui m'appartiennent sur ce site</span>
+          </h1>
+          <button type="button" class="rounded-pill btn-rounded ">Voir
+            mes créations
+            <span>
+              <i class="fas fa-arrow-right"></i>
+            </span>
+          </button>
+        </div>
+        <div class="col-md-6 intros"></div>
+      </div>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#ffffff" fill-opacity="1"
+        d="M0,64L60,96C120,128,240,192,360,192C480,192,600,128,720,117.3C840,107,960,149,1080,170.7C1200,192,1320,192,1380,192L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+      </path>
+    </svg>
+
+  </section>
 
   <!-- Including Bundle.Js-->
 
