--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <div class="col-md-6 intros">
           <h1 class="display-2">
             <span class="display-2--intro">Je suis Rafael Longeville</span>
-            <span class="display-2--description lh-base">En recherche active d'une entreprise innovante, je présente
-              quelques créations qui m'appartiennent sur ce site</span>
+            <span class="display-2--description lh-base">Intégrateur Web, je cherche une entreprise innovante. Je
+              construit votre site web et je
+              propose des services de maintenance informatique </span>
           </h1>
-          <button type="button" class="rounded-pill btn-rounded ">Voir
-            mes créations
+          <button type="button" class="rounded-pill btn-rounded ">Découvrir mes offres
             <span>
               <i class="fas fa-arrow-right"></i>
             </span>
@@ -81,8 +81,56 @@
         d="M0,64L60,96C120,128,240,192,360,192C480,192,600,128,720,117.3C840,107,960,149,1080,170.7C1200,192,1320,192,1380,192L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
       </path>
     </svg>
-
   </section>
+
+  <!-- Start the Campanies Section-->
+
+  <section id="campanies" class="campanies">
+    <div class="container">
+      <div class="row text-center">
+        <h4 class="fw-bold lead mb-3">Ils m'ont fait confiance</h4>
+        <div class="heading-line mb-5"></div>
+      </div>
+    </div>
+
+    <!-- Start the Campanies Content-->
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-lg-2">
+          <div class="campanies__logo-box shadow-sm">
+            <img src="images/logos/campany-1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+          <div class="campanies__logo-box shadow-sm">
+            <img src="images/logos/campany-2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+          <div class="campanies__logo-box shadow-sm">
+            <img src="images/logos/campany-3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+          <div class="campanies__logo-box shadow-sm">
+            <img src="images/logos/campany-4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+          <div class="campanies__logo-box shadow-sm">
+            <img src="images/logos/campany-5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+          <div class="campanies__logo-box shadow-sm">
+            <img src="images/logos/campany-6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- Including Bundle.Js-->
 
