commit the Services Section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="images/logo.png.png" alt="logo">
+        <img src="images/Photo Officielle Rafael.png" style="width: 50px; height: 50px;" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,10 +30,10 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#">Mes services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
@@ -41,7 +41,6 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
           </li>
-
         </ul>
 
         <button type="button" class="rounded-pill btn-rounded">+36 660788474
@@ -62,11 +61,19 @@
       <div class="row align-item-center text-white">
         <div class="col-md-6 intros">
           <h1 class="display-2">
-            <span class="display-2--intro">Je suis Rafael Longeville</span>
-            <span class="display-2--description lh-base">Intégrateur Web, je cherche une entreprise innovante. Je
-              construit votre site web et je
-              propose des services de maintenance informatique </span>
+            <span class="display-2--intro">Rafael Longeville</span>
+            <span class="display-2--description lh-base">Intégrateur Web, je recherche activement une entreprise
+              innovante pour mon
+              alternance en deux ans.
+              <br>
+              <br>
+              Ensemble, nous construirons votre site web et je vous
+              proposerait des services de maintenance informatique. <br><br>
+              Pour mon alternance, grâce au contexte sanitaire actuel, il n’y a aucun reste à charge pour les
+              entreprises en ce qui concerne les frais de formation
+            </span>
           </h1>
+          <br>
           <button type="button" class="rounded-pill btn-rounded ">Découvrir mes offres
             <span>
               <i class="fas fa-arrow-right"></i>
@@ -131,6 +138,91 @@
     </div>
   </section>
 
+  <!-- Start the Services section-->
+  <section id="services" class="services">
+    <div class="container">
+      <div class="row text-center">
+        <h1 class="display-3 fw-bold">Mes services</h1>
+        <div class="heading-line mb-1"></div>
+      </div>
+
+
+
+      <!-- Start the description Content-->
+
+      <div class="row pt-2 pb-2 mt-0 mb-3">
+        <div class="col-md-6 border-right">
+          <div class="bg-white p-3">
+            <h2 class="fw-bold  text-center">
+              Mes services vont du déploiement complet de votre site web Responsive jusqu'au nettoyage et à la
+              sécurisation de
+              votre ordinateur
+            </h2>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="bg-white p-4 text-start">
+            <p class="fw-light">
+              Je vous propose un service de qualité en distanciel, sans bugs ni complications, du site web responsive à
+              la maintenance de votre poste informatique.
+              Pouvoir améliorer le quotidien des particuliers en optimisant leur environnement numérique me tiens à
+              coeur.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!--Start the content for the Services-->
+    <div class="container">
+      <!--Start the WebDev Content-->
+
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+          <div class="services__content">
+            <div class="icon d-block fas fa-laptop"></div>
+            <h3 class="display-3--title mt-1">Maintenance Informatique</h3>
+            <p class="lh-lg">
+              À distance, je prendrais le contrôle de votre poste informatique puis j'installerais différents logiciels
+              pour optimiser la vitesse de votre PC.<br> J'installerais également l'un des meilleurs Anti-Virus du
+              marché
+              pour que votre navigation sur le web se fasse en toute sécurité.
+            </p>
+            <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
+              <span><i class="fas fa-arrow-right"></i></span>
+            </button>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
+          <div class="services__pic">
+            <img src="images/services/service-1.png" alt="marketing illustration" class="img-fluid">
+          </div>
+        </div>
+      </div>
+      <!-- START THE WEB DEVELOPMENT CONTENT  -->
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
+          <div class="services__pic">
+            <img src="images/services/service-2.png" alt="web development illustration" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
+          <div class="services__content">
+            <div class="icon d-block fas fa-code"></div>
+            <h3 class="display-3--title mt-1">web development</h3>
+            <p class="lh-lg">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
+              doloremque autem quibusdam blanditiis harum alias hic accusantium
+              maxime atque ratione magni repellat?
+            </p>
+            <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
+              <span><i class="fas fa-arrow-right"></i></span>
+            </button>
+          </div>
+        </div>
+      </div>
+  </section>
 
   <!-- Including Bundle.Js-->
 
