--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               marché
               pour que votre navigation sur le web se fasse en toute sécurité.
             </p>
-            <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
+            <button type="button" class="rounded-pill btn-rounded border-primary">Super, je veux sécuriser mon PC
               <span><i class="fas fa-arrow-right"></i></span>
             </button>
           </div>
@@ -216,12 +216,140 @@
               doloremque autem quibusdam blanditiis harum alias hic accusantium
               maxime atque ratione magni repellat?
             </p>
-            <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
+            <button type="button" class="rounded-pill btn-rounded border-primary"> Génial, je souhaite améliorer ma
+              communication
+              sur le web
               <span><i class="fas fa-arrow-right"></i></span>
             </button>
           </div>
         </div>
       </div>
+  </section>
+
+
+  <!-- Start the Testimonials Section-->
+  <section id="testimonials" class="testimonials">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,256L48,229.3C96,203,192,149,288,144C384,139,480,181,576,176C672,171,768,117,864,128C960,139,1056,213,1152,234.7C1248,256,1344,224,1392,208L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+      </path>
+    </svg>
+    <div class="container">
+      <div class="row text-center text-white">
+        <h1 class="display-3 fw-bold">Témoignages</h1>
+        <hr style="width: 100px; height: 3px; " class="mx-auto">
+        <p class="lead pt-1">Ce que mes collègues disent à propos de moi</p>
+      </div>
+
+      <!-- Start the Carousel content-->
+      <div class="row align-items-center">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <!-- CAROUSEL ITEM 1-->
+            <div class="carousel-item active">
+              <!-- testimonials card-->
+              <div class="testimonials__card">
+                <p class="lh-lg">
+                  <i class="fas fa-quote-left"></i>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta repellendus architecto, officiis
+                  impedit cum saepe possimus similique cupiditate ipsa natus atque.
+                  <i class="fas fa-quote-right"></i>
+                <div class="ratings p-1">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                </p>
+              </div>
+              <!-- Photos témoignages-->
+              <div class="testimonials__picture">
+                <img src="images/testimonials/thomas.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+              </div>
+              <!-- client name & role -->
+              <div class="testimonials__name">
+                <h3>Thomas Longeville</h3>
+                <p class="fw-light">Responsable Comercial chez Optimis'ACTION</p>
+              </div>
+            </div>
+            <!-- CAROUSEL ITEM 2-->
+            <div class="carousel-item">
+              <!-- testimonials card-->
+              <div class="testimonials__card">
+                <p class="lh-lg">
+                  <i class="fas fa-quote-left"></i>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta repellendus architecto, officiis
+                  impedit cum saepe possimus similique cupiditate ipsa natus atque.
+                  <i class="fas fa-quote-right"></i>
+                <div class="ratings p-1">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                </p>
+              </div>
+              <!-- Photos témoignages-->
+              <div class="testimonials__picture">
+                <img src="images/testimonials/william.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
+              </div>
+              <!-- client name & role -->
+              <div class="testimonials__name">
+                <h3>William Debusier</h3>
+                <p class="fw-light">Directeur associé chez Optimis'ACTION</p>
+              </div>
+            </div>
+
+            <!-- CAROUSEL ITEM 3 -->
+            <div class="carousel-item">
+              <!-- testimonials card-->
+              <div class="testimonials__card">
+                <p class="lh-lg">
+                  <i class="fas fa-quote-left"></i>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta repellendus architecto, officiis
+                  impedit cum saepe possimus similique cupiditate ipsa natus atque.
+                  <i class="fas fa-quote-right"></i>
+                <div class="ratings p-1">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                </p>
+              </div>
+              <!-- Photos témoignages-->
+              <div class="testimonials__picture">
+                <img src="images/testimonials/maman.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
+              </div>
+              <!-- client name & role -->
+              <div class="testimonials__name">
+                <h3>Paola Lynett</h3>
+                <p class="fw-light">Négociatrice en immobilier chez ERA Rive droite</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="text-center">
+          <button class="btn btn-outline-light fas fa-long-arrow-alt-left" type="button"
+            data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+
+          </button>
+          <button class="btn btn-outline-light fas fa-long-arrow-alt-right" type="button"
+            data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+
+          </button>
+        </div>
+      </div>
+    </div>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#fff" fill-opacity="1"
+        d="M0,256L48,229.3C96,203,192,149,288,144C384,139,480,181,576,176C672,171,768,117,864,128C960,139,1056,213,1152,234.7C1248,256,1344,224,1392,208L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
   </section>
 
   <!-- Including Bundle.Js-->
