--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
             <a class="nav-link active" aria-current="page" href="#">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Mes services</a>
+            <a class="nav-link" href="#services">Mes services</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#footer-btm">Contact</a>
           </li>
         </ul>
 
@@ -59,7 +57,7 @@
   <section id="home" class="intro-section">
     <div class="container">
       <div class="row align-item-center text-white">
-        <div class="col-md-6 intros">
+        <div class="col-md-8 intros">
           <h1 class="display-2">
             <span class="display-2--intro">Rafael Longeville</span>
             <span class="display-2--description lh-base">Intégrateur Web, je recherche activement une entreprise
@@ -74,11 +72,13 @@
             </span>
           </h1>
           <br>
-          <button type="button" class="rounded-pill btn-rounded ">Découvrir mes offres
-            <span>
-              <i class="fas fa-arrow-right"></i>
-            </span>
-          </button>
+          <a href="#services" style="text-decoration: none;">
+            <button type="button" class="rounded-pill btn-rounded ">Découvrir mes offres
+              <span>
+                <i class="fas fa-arrow-right"></i>
+              </span>
+            </button>
+          </a>
         </div>
         <div class="col-md-6 intros"></div>
       </div>
@@ -210,11 +210,10 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
           <div class="services__content">
             <div class="icon d-block fas fa-code"></div>
-            <h3 class="display-3--title mt-1">web development</h3>
+            <h3 class="display-3--title mt-1">Développement Web</h3>
             <p class="lh-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-              doloremque autem quibusdam blanditiis harum alias hic accusantium
-              maxime atque ratione magni repellat?
+              Ensemble, nous verrons quel type de site web correspond le mieux à votre buisiness, nous instaurerons des
+              fonctionalités qui vous plaisent mais également des modalités de payement intuitives
             </p>
             <button type="button" class="rounded-pill btn-rounded border-primary"> Génial, je souhaite améliorer ma
               communication
@@ -251,8 +250,8 @@
               <div class="testimonials__card">
                 <p class="lh-lg">
                   <i class="fas fa-quote-left"></i>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta repellendus architecto, officiis
-                  impedit cum saepe possimus similique cupiditate ipsa natus atque.
+                  Très bonne expérience aux côtés de Rafael, ce jeune homme est plein d'ambition et il a le goût du
+                  travail
                   <i class="fas fa-quote-right"></i>
                 <div class="ratings p-1">
                   <i class="fas fa-star"></i>
@@ -279,8 +278,9 @@
               <div class="testimonials__card">
                 <p class="lh-lg">
                   <i class="fas fa-quote-left"></i>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta repellendus architecto, officiis
-                  impedit cum saepe possimus similique cupiditate ipsa natus atque.
+                  Rafael est un jeune rentrant dans le monde du travail, rigueur et persévérance sont ses mots d'ordre,
+                  il
+                  sait être à l'écoute mais également à votre service
                   <i class="fas fa-quote-right"></i>
                 <div class="ratings p-1">
                   <i class="fas fa-star"></i>
@@ -351,6 +351,101 @@
       </path>
     </svg>
   </section>
+
+  <!-- Start the Footer-->
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <!-- Content for the mobile number-->
+        <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+          <div class="contact-box__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" viewBox="0 0 24 24"
+              stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path
+                d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+              <path d="M15 7a2 2 0 0 1 2 2" />
+              <path d="M15 3a6 6 0 0 1 6 6" />
+            </svg>
+          </div>
+          <div class="contact-box__info">
+            <a href="" class="contact-box__info--title">+36 660788474</a>
+            <p class="contact-box__info--subtitle">Lundi-Vendredi 9h-19h</p>
+          </div>
+        </div>
+        <!-- Content for the e-mail -->
+        <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+          <div class="contact-box__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-opened" viewBox="0 0 24 24"
+              stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <polyline points="3 9 12 15 21 9 12 3 3 9" />
+              <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
+              <line x1="3" y1="19" x2="9" y2="13" />
+              <line x1="15" y1="13" x2="21" y2="19" />
+            </svg>
+          </div>
+          <div class="contact-box__info">
+            <a href="" class="contact-box__info--title">rafael.longeville.pro@gmail.com</a>
+            <p class="contact-box__info--subtitle">Contactez-moi pour plus d'infos</p>
+          </div>
+        </div>
+        <!-- Content for the Location-->
+        <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+          <div class="contact-box__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" viewBox="0 0 24 24"
+              stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <line x1="18" y1="6" x2="18" y2="6.01" />
+              <path d="M18 13l-3.5 -5a4 4 0 1 1 7 0l-3.5 5" />
+              <polyline points="10.5 4.75 9 4 3 7 3 20 9 17 15 20 21 17 21 15" />
+              <line x1="9" y1="4" x2="9" y2="17" />
+              <line x1="15" y1="15" x2="15" y2="20" />
+            </svg>
+          </div>
+          <div class="contact-box__info">
+            <a href="" class="contact-box__info--title">Bordeaux, France</a>
+            <p class="contact-box__info--subtitle">Bordeaux 33000, FR</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Start the social media content-->
+    <div class="footer-sm" style="background-color: #212121;">
+      <div class="container">
+        <div class="row py-4 text-center text-white">
+          <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
+            Ajoutez moi sur les réseaux sociaux
+          </div>
+          <div class="col-lg-7 col-md-6">
+            <a href=""><i class="fab fa-github"></i></a>
+            <a href=""><i class="fab fa-linkedin"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Start the copyright Content-->
+    <div id="footer-btm" class="footer-bottom pt-5 pb-5 ">
+      <div class="container">
+        <div class="row text-center text-white">
+          <div class="col-12">
+            <div class="footer-bottom__copyright">
+              &COPY; Copyright 2021 <a href="#">Micro-entreprise</a> | Crée par <a href="#">Rafael Longeville</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Back to top button-->
+  <a href="#" class="shadow btn-primary rounded-circle back-to-top">
+    <i class="fas fa-chevron-up"></i>
+  </a>
 
   <!-- Including Bundle.Js-->
 
