--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </li>
         </ul>
 
-        <button type="button" class="rounded-pill btn-rounded">+36 660788474
+        <button type="button" class="rounded-pill btn-rounded">+33 660788474
           <span>
             <i class="fas fa-phone-alt"></i>
           </span>
@@ -66,7 +66,7 @@
               <br>
               <br>
               Ensemble, nous construirons votre site web et je vous
-              proposerait des services de maintenance informatique. <br><br>
+              proposerais des services de maintenance informatique. <br><br>
               Pour mon alternance, grâce au contexte sanitaire actuel, il n’y a aucun reste à charge pour les
               entreprises en ce qui concerne les frais de formation
             </span>
@@ -308,8 +308,8 @@
               <div class="testimonials__card">
                 <p class="lh-lg">
                   <i class="fas fa-quote-left"></i>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta repellendus architecto, officiis
-                  impedit cum saepe possimus similique cupiditate ipsa natus atque.
+                  Rafael est astucieux et appliqué, il sait mettre en œuvre toutes ses connaissances pour mener à bien
+                  ses missions et projets.
                   <i class="fas fa-quote-right"></i>
                 <div class="ratings p-1">
                   <i class="fas fa-star"></i>
@@ -369,7 +369,7 @@
             </svg>
           </div>
           <div class="contact-box__info">
-            <a href="" class="contact-box__info--title">+36 660788474</a>
+            <a href="" class="contact-box__info--title">+33 660788474</a>
             <p class="contact-box__info--subtitle">Lundi-Vendredi 9h-19h</p>
           </div>
         </div>
@@ -386,7 +386,8 @@
             </svg>
           </div>
           <div class="contact-box__info">
-            <a href="" class="contact-box__info--title">rafael.longeville.pro@gmail.com</a>
+            <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHxwCmJLSGcdhndgZbggtNFZSgjCPHHVkBChNdWxsZGbKDMnmHlqnmWfzljFVNNXPmtcBrR"
+              target="_blank" class="contact-box__info--title">rafael.longeville.pro@gmail.com</a>
             <p class="contact-box__info--subtitle">Contactez-moi pour plus d'infos</p>
           </div>
         </div>
@@ -419,9 +420,9 @@
             Ajoutez moi sur les réseaux sociaux
           </div>
           <div class="col-lg-7 col-md-6">
-            <a href=""><i class="fab fa-github"></i></a>
-            <a href=""><i class="fab fa-linkedin"></i></a>
-            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/rafael-longeville" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/rafael-longeville/" target="_blank"><i class="fab fa-linkedin"></i></a>
+
           </div>
         </div>
       </div>
