--- a/index.html
+++ b/index.html
@@ -228,53 +228,49 @@
 
   <!-- Start the Testimonials Section-->
   <section id="testimonials" class="testimonials">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#fff" fill-opacity="1"
-        d="M0,256L48,229.3C96,203,192,149,288,144C384,139,480,181,576,176C672,171,768,117,864,128C960,139,1056,213,1152,234.7C1248,256,1344,224,1392,208L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
-      </path>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
     <div class="container">
       <div class="row text-center text-white">
         <h1 class="display-3 fw-bold">Témoignages</h1>
         <hr style="width: 100px; height: 3px; " class="mx-auto">
-        <p class="lead pt-1">Ce que mes collègues disent à propos de moi</p>
+        <p class="lead pt-1">Ce que mes collaborateurs disent sur moi</p>
       </div>
-
-      <!-- Start the Carousel content-->
+  
+      <!-- START THE CAROUSEL CONTENT  -->
       <div class="row align-items-center">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
-            <!-- CAROUSEL ITEM 1-->
+            <!-- CAROUSEL ITEM 1 -->
             <div class="carousel-item active">
-              <!-- testimonials card-->
+              <!-- testimonials card  -->
               <div class="testimonials__card">
                 <p class="lh-lg">
                   <i class="fas fa-quote-left"></i>
                   Très bonne expérience aux côtés de Rafael, ce jeune homme est plein d'ambition et il a le goût du
                   travail
                   <i class="fas fa-quote-right"></i>
-                <div class="ratings p-1">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
+                  <div class="ratings p-1">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
                 </p>
               </div>
-              <!-- Photos témoignages-->
+              <!-- client picture  -->
               <div class="testimonials__picture">
                 <img src="images/testimonials/thomas.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
               </div>
-              <!-- client name & role -->
+              <!-- client name & role  -->
               <div class="testimonials__name">
                 <h3>Thomas Longeville</h3>
                 <p class="fw-light">Responsable Comercial chez Optimis'ACTION</p>
               </div>
-            </div>
-            <!-- CAROUSEL ITEM 2-->
+            </div>     
+            <!-- CAROUSEL ITEM 2 -->
             <div class="carousel-item">
-              <!-- testimonials card-->
+              <!-- testimonials card  -->
               <div class="testimonials__card">
                 <p class="lh-lg">
                   <i class="fas fa-quote-left"></i>
@@ -282,75 +278,67 @@
                   il
                   sait être à l'écoute mais également à votre service
                   <i class="fas fa-quote-right"></i>
-                <div class="ratings p-1">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
+                  <div class="ratings p-1">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
                 </p>
               </div>
-              <!-- Photos témoignages-->
+              <!-- client picture  -->
               <div class="testimonials__picture">
                 <img src="images/testimonials/william.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
               </div>
-              <!-- client name & role -->
+              <!-- client name & role  -->
               <div class="testimonials__name">
-                <h3>William Debusier</h3>
-                <p class="fw-light">Directeur associé chez Optimis'ACTION</p>
+                <h3>William Debussier</h3>
+                <p class="fw-light">Directeur Associé chez OPTIMIS'ACTION</p>
               </div>
-            </div>
-
+            </div>     
             <!-- CAROUSEL ITEM 3 -->
             <div class="carousel-item">
-              <!-- testimonials card-->
+              <!-- testimonials card  -->
               <div class="testimonials__card">
                 <p class="lh-lg">
                   <i class="fas fa-quote-left"></i>
                   Rafael est astucieux et appliqué, il sait mettre en œuvre toutes ses connaissances pour mener à bien
                   ses missions et projets.
                   <i class="fas fa-quote-right"></i>
-                <div class="ratings p-1">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </div>
+                  <div class="ratings p-1">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
                 </p>
               </div>
-              <!-- Photos témoignages-->
+              <!-- client picture  -->
               <div class="testimonials__picture">
                 <img src="images/testimonials/maman.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
               </div>
-              <!-- client name & role -->
+              <!-- client name & role  -->
               <div class="testimonials__name">
                 <h3>Paola Lynett</h3>
-                <p class="fw-light">Négociatrice en immobilier chez ERA Rive droite</p>
+                <p class="fw-light">Négociatrice en Immobilier </p>
               </div>
-            </div>
+            </div>          
           </div>
-        </div>
-        <div class="text-center">
-          <button class="btn btn-outline-light fas fa-long-arrow-alt-left" type="button"
-            data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-
+          <div class="text-center">
+            <button class="btn btn-outline-light fas fa-long-arrow-alt-left" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           </button>
-          <button class="btn btn-outline-light fas fa-long-arrow-alt-right" type="button"
-            data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-
+          <button class="btn btn-outline-light fas fa-long-arrow-alt-right" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
           </button>
+          </div>
         </div>
       </div>
     </div>
-    </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#fff" fill-opacity="1"
-        d="M0,256L48,229.3C96,203,192,149,288,144C384,139,480,181,576,176C672,171,768,117,864,128C960,139,1056,213,1152,234.7C1248,256,1344,224,1392,208L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-      </path>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
   </section>
+
+  
 
   <!-- Start the Footer-->
   <footer class="footer">
