--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <!-- Starting the NavBar section -->
+  <!-- Commencer la Navbar -->
 
   <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
     <div class="container">
@@ -51,7 +51,7 @@
   </nav>
 
 
-  <!-- Starting the Intro Section-->
+  <!--Commencer l'introduction-->
 
 
   <section id="home" class="intro-section">
@@ -60,7 +60,7 @@
         <div class="col-md-8 intros">
           <h1 class="display-2">
             <span class="display-2--intro">Rafael Longeville</span>
-            <span class="display-2--description lh-base">Intégrateur Web, je recherche activement une entreprise
+            <span class="display-2--description lh-base">Développeur avec le statut "Étudiant sans employeur", je recherche urgemment une entreprise
               innovante pour mon
               alternance en deux ans.
               <br>
@@ -90,7 +90,7 @@
     </svg>
   </section>
 
-  <!-- Start the Campanies Section-->
+  <!--Commencer la partie des logos entreprises-->
 
   <section id="campanies" class="campanies">
     <div class="container">
@@ -100,7 +100,7 @@
       </div>
     </div>
 
-    <!-- Start the Campanies Content-->
+    <!-- Commencer les entreprises-->
 
     <div class="container">
       <div class="row">
@@ -138,7 +138,7 @@
     </div>
   </section>
 
-  <!-- Start the Services section-->
+  <!-- Commencer la section des services-->
   <section id="services" class="services">
     <div class="container">
       <div class="row text-center">
@@ -148,7 +148,7 @@
 
 
 
-      <!-- Start the description Content-->
+      <!--Commencer la description-->
 
       <div class="row pt-2 pb-2 mt-0 mb-3">
         <div class="col-md-6 border-right">
@@ -174,9 +174,9 @@
     </div>
 
 
-    <!--Start the content for the Services-->
+    <!--Commencer le contenu des services-->
     <div class="container">
-      <!--Start the WebDev Content-->
+      <!--Commencer contenu du WebDev-->
 
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
@@ -189,7 +189,7 @@
               marché
               pour que votre navigation sur le web se fasse en toute sécurité.
             </p>
-            <button type="button" class="rounded-pill btn-rounded border-primary">Super, je veux sécuriser mon PC
+            <button onclick="window.location.href='/cv.html'" class="rounded-pill btn-rounded border-primary">Super, je veux sécuriser mon PC
               <span><i class="fas fa-arrow-right"></i></span>
             </button>
           </div>
@@ -200,7 +200,7 @@
           </div>
         </div>
       </div>
-      <!-- START THE WEB DEVELOPMENT CONTENT  -->
+      <!--Commencer le contenu du WEBDEV  -->
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
           <div class="services__pic">
@@ -226,7 +226,7 @@
   </section>
 
 
-  <!-- Start the Testimonials Section-->
+  <!-- Commencer les témoignages-->
   <section id="testimonials" class="testimonials">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,213.3C384,203,480,117,576,117.3C672,117,768,203,864,202.7C960,203,1056,117,1152,117.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
     <div class="container">
@@ -236,13 +236,13 @@
         <p class="lead pt-1">Ce que mes collaborateurs disent sur moi</p>
       </div>
   
-      <!-- START THE CAROUSEL CONTENT  -->
+      <!-- Carousel  -->
       <div class="row align-items-center">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <!-- CAROUSEL ITEM 1 -->
             <div class="carousel-item active">
-              <!-- testimonials card  -->
+              <!-- Carte des témoignages  -->
               <div class="testimonials__card">
                 <p class="lh-lg">
                   <i class="fas fa-quote-left"></i>
@@ -258,11 +258,11 @@
                   </div>
                 </p>
               </div>
-              <!-- client picture  -->
+              <!-- Photo du client  -->
               <div class="testimonials__picture">
                 <img src="images/testimonials/thomas.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
               </div>
-              <!-- client name & role  -->
+              <!-- Nom et poste du client  -->
               <div class="testimonials__name">
                 <h3>Thomas Longeville</h3>
                 <p class="fw-light">Responsable Comercial chez Optimis'ACTION</p>
@@ -270,7 +270,7 @@
             </div>     
             <!-- CAROUSEL ITEM 2 -->
             <div class="carousel-item">
-              <!-- testimonials card  -->
+              <!-- Carte des témoignages  -->
               <div class="testimonials__card">
                 <p class="lh-lg">
                   <i class="fas fa-quote-left"></i>
@@ -287,11 +287,11 @@
                   </div>
                 </p>
               </div>
-              <!-- client picture  -->
+              <!-- Photo du client  -->
               <div class="testimonials__picture">
                 <img src="images/testimonials/william.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
               </div>
-              <!-- client name & role  -->
+              <!-- Nom et poste du client -->
               <div class="testimonials__name">
                 <h3>William Debussier</h3>
                 <p class="fw-light">Directeur Associé chez OPTIMIS'ACTION</p>
@@ -299,7 +299,7 @@
             </div>     
             <!-- CAROUSEL ITEM 3 -->
             <div class="carousel-item">
-              <!-- testimonials card  -->
+              <!-- Carte des témoignages -->
               <div class="testimonials__card">
                 <p class="lh-lg">
                   <i class="fas fa-quote-left"></i>
@@ -315,11 +315,11 @@
                   </div>
                 </p>
               </div>
-              <!-- client picture  -->
+              <!-- Photo du client    -->
               <div class="testimonials__picture">
                 <img src="images/testimonials/maman.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
               </div>
-              <!-- client name & role  -->
+              <!-- Nom et poste du client  -->
               <div class="testimonials__name">
                 <h3>Paola Lynett</h3>
                 <p class="fw-light">Négociatrice en Immobilier </p>
@@ -340,11 +340,11 @@
 
   
 
-  <!-- Start the Footer-->
+  <!-- Commencer le  Footer-->
   <footer class="footer">
     <div class="container">
       <div class="row">
-        <!-- Content for the mobile number-->
+        <!-- Contenu du mobile-->
         <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
           <div class="contact-box__icon">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" viewBox="0 0 24 24"
@@ -361,7 +361,7 @@
             <p class="contact-box__info--subtitle">Lundi-Vendredi 9h-19h</p>
           </div>
         </div>
-        <!-- Content for the e-mail -->
+        <!-- Contenu des e-mails -->
         <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
           <div class="contact-box__icon">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-opened" viewBox="0 0 24 24"
@@ -379,7 +379,7 @@
             <p class="contact-box__info--subtitle">Contactez-moi pour plus d'infos</p>
           </div>
         </div>
-        <!-- Content for the Location-->
+        <!-- Contenu de la Localisation-->
         <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
           <div class="contact-box__icon">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" viewBox="0 0 24 24"
@@ -400,7 +400,7 @@
       </div>
     </div>
 
-    <!-- Start the social media content-->
+    <!--Commencer les réseaux sociaux-->
     <div class="footer-sm" style="background-color: #212121;">
       <div class="container">
         <div class="row py-4 text-center text-white">
@@ -417,7 +417,7 @@
     </div>
 
 
-    <!-- Start the copyright Content-->
+    <!-- Commencer le copyright-->
     <div id="footer-btm" class="footer-bottom pt-5 pb-5 ">
       <div class="container">
         <div class="row text-center text-white">
@@ -431,12 +431,12 @@
     </div>
   </footer>
 
-  <!-- Back to top button-->
+  <!-- Bouton pour revenir en haut-->
   <a href="#" class="shadow btn-primary rounded-circle back-to-top">
     <i class="fas fa-chevron-up"></i>
   </a>
 
-  <!-- Including Bundle.Js-->
+  <!-- Intégrer Bundle.Js-->
 
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
