--- a/index.html
+++ b/index.html
@@ -189,9 +189,12 @@
               marché
               pour que votre navigation sur le web se fasse en toute sécurité.
             </p>
-            <button type="button" class="rounded-pill btn-rounded border-primary">Super, je veux sécuriser mon PC
-              <span><i class="fas fa-arrow-right"></i></span>
-            </button>
+            <a href="#contact-scroll" style="text-decoration: none;">
+              <button type="button" class="rounded-pill btn-rounded border-primary">
+                Super, mon PC n'est plus tout jeune
+                <span><i class="fas fa-arrow-right"></i></span>
+              </button>
+            </a>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
@@ -223,6 +226,23 @@
           </div>
         </div>
       </div>
+  </section>
+
+  <div id="contact-scroll">
+    <br>
+  </div>
+  <!-- Prenez mes services-->
+
+  <section id="contact" class="get-started">
+    <div class="container">
+      <div class="row text-center">
+        <h1 class="display-3 fw-bold text-capitalize">Obtenir mes services</h1>
+        <div class="heading-line"></div>
+        <p class="lh-lg">
+          shfjkhqjsdhfdjklqqhslfjkdhq qlsjkhfjlqshfdjklqs hkljqshdfjkhqsfjkdlhqsldjfkh
+        </p>
+      </div>
+    </div>
   </section>
 
 
@@ -331,19 +351,18 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="text-center">
-          <button class="btn btn-outline-light fas fa-long-arrow-alt-left" type="button"
-            data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <div class="text-center">
+            <button class="btn btn-outline-light fas fa-long-arrow-alt-left" type="button"
+              data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
 
-          </button>
-          <button class="btn btn-outline-light fas fa-long-arrow-alt-right" type="button"
-            data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            </button>
+            <button class="btn btn-outline-light fas fa-long-arrow-alt-right" type="button"
+              data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
 
-          </button>
+            </button>
+          </div>
         </div>
       </div>
-    </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#fff" fill-opacity="1"
@@ -448,9 +467,11 @@
     <i class="fas fa-chevron-up"></i>
   </a>
 
-  <!-- Including Bundle.Js-->
+  <!-- Scripts-->
 
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  <script src="/app-js/index.js"></script>
+  <script src='/app-js/smoothScroll.js'></script>
 
 
 </body>
