commit CV and image

--- a/index.html
+++ b/index.html
@@ -329,13 +329,13 @@
     </div>
     <div class="carde__center">
       <div class="card" style="width: 18rem;">
-        <img src="/images/CV Rafael Longeville_page-0001.jpg" class="card-img-top" alt="image cv">
+        <img src="/images/rafa-cv.jpg" class="card-img-top" alt="image cv">
         <div class="card-body">
           <h5 class="card-title">Mon CV</h5>
           <p class="card-text">Regardez mes compétences et n'hésitez pas à m'ajouter sur <a
               href="https://www.linkedin.com/in/rafael-longeville/" target="_blank">LinkedIn</a> pour un devis
             personalisé</p>
-          <a href="/assets/CV Rafael Longeville.pdf" class="btn btn-primary" target="_blank">Visualisez mon CV en PDF
+          <a href="/images/Rafael longeville (1).pdf" class="btn btn-primary" target="_blank">Visualisez mon CV en PDF
           </a>
         </div>
       </div>
