--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <section id="home" class="intro-section">
     <div class="container">
-      <div class="row align-item-center text-white">
+      <div class="row align-item-center text-white" style="flex-basis: ">
         <div class="col-md-6 intros">
 
           <h1 class="display-2">
@@ -87,7 +87,9 @@
             </button>
           </a>
         </div>
-        <img src="/images/photo-rafa.png" alt="rafa" style="width: 500px; height: 500px;">
+        <div class="col-md-6">
+          <img src="/images/photo-rafa.png" alt="rafa" style="width: 800px; height: px; margin-left: 10em;">
+        </div>
         <div class="col-md-6 intros"></div>
       </div>
     </div>
@@ -198,22 +200,7 @@
       </div>
   </section>
 
-  <div id="contact-scroll">
-    <br>
-  </div>
-  <!-- Prenez mes services-->
 
-  <section id="contact" class="get-started">
-    <div class="container">
-      <div class="row text-center">
-        <h1 class="display-3 fw-bold text-capitalize">Obtenir mes services</h1>
-        <div class="heading-line"></div>
-        <p class="lh-lg">
-          shfjkhqjsdhfdjklqqhslfjkdhq qlsjkhfjlqshfdjklqs hkljqshdfjkhqsfjkdlhqsldjfkh
-        </p>
-      </div>
-    </div>
-  </section>
 
 
   <!-- Commencer les témoignages-->
