--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         </ul>
 
         <button onclick="window.open('tel:0660788474')" type="button" class="rounded-pill btn-rounded">06 60 78 84 74
-
           <span>
             <i class="fas fa-phone-alt"></i>
           </span>
@@ -58,9 +57,8 @@
 
   <section id="home" class="intro-section">
     <div class="container">
-      <div class="row align-item-center text-white" style="flex-basis: ">
+      <div class="row align-item-center text-white justify-content-between" >
         <div class="col-md-6 intros">
-
           <h1 class="display-2">
             <span class="display-2--intro">Rafael Longeville</span>
             <span class="display-2--description lh-base">Développeur Informatique au CESI, je recherche activement une
@@ -87,10 +85,9 @@
             </button>
           </a>
         </div>
-        <div class="col-md-6">
-          <img src="/images/photo-rafa.png" alt="rafa" style="width: 800px; height: px; margin-left: 10em;">
+        <div class="col-md-6 intros">
+          <img src="/images/photo-rafa.png" alt="rafa">
         </div>
-        <div class="col-md-6 intros"></div>
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
