change the intro paragraph

--- a/index.html
+++ b/index.html
@@ -57,23 +57,24 @@
 
   <section id="home" class="intro-section">
     <div class="container">
-      <div class="row align-item-center text-white justify-content-between" >
+      <div class="row align-item-center text-white justify-content-between">
         <div class="col-md-6 intros">
           <h1 class="display-2">
             <span class="display-2--intro">Rafael Longeville</span>
-            <span class="display-2--description lh-base">Développeur Informatique au CESI, je recherche activement une
+            <span class="display-2--description lh-base">Etudiant "Développeur Informatique" au CESI, je recherche
+              activement une
               entreprise
               innovante pour mon
               alternance en deux ans, sous le rythme de 3 semaines en entreprise, une semaine en formation.
               <br>
+              <br>Je souhaite participer à des projets Front-End en React.js pour améliorer mes compétences sur ce
+              framework.
+              Trilingue espagnol et anglais, je suis passioné par le Web 3.0, en particulier par la programmation de
+              smart-contracts.
               <br>
-              Franco-Colombien, trilingue espagnol et anglais, j’ai réalisé la plus grande partie de ma scolarité au
-              lycée Français de Bogota.
-              <br>Je souhaite participer sur des projets Front-End en React.js pour agrandir mon savoir et mes
-              compétences professionnelles <br>
               <br>
-              Pour mon alternance, grâce au contexte sanitaire actuel, il n’y a aucun reste à charge pour les
-              entreprises en ce qui concerne les frais de formation
+              Grâce aux dispositions fiscales actuelles, une aide de 8000 € est proposée à toute entreprise à l'embauche
+              d'un alternant
             </span>
           </h1>
           <br>
