--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             </button>
           </a>
         </div>
-        <div class="col-md-6 intros">
-          <img src="/images/photo-rafa.png" alt="rafa">
+        <div class="col-md-5 intros">
+          <img src="/images/photo-rafa.png" class="img-fluid"alt="rafa">
         </div>
       </div>
     </div>
