--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
               <img src="./images/logo-excel.jpg" alt="excel" style="width: 50px;height: 50px;">
               <br>
               <div>
-                <span class="badge badge-pill">Invoice</span>
-                <span class="badge badge-pill">Tasks</span>
+                <span class="badge badge-pill">Excel</span>
+                <span class="badge badge-pill">Listing</span>
               </div>
             </div>
           </div>
