--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               alternance en deux ans,<br> sous le rythme de 3 semaines en entreprise, une semaine en formation.
               <br>
               <br>Je souhaite participer à des projets Front-End en React.js pour améliorer mes compétences sur ce
-              framework.<br>
+              framework.<br><br>
               Trilingue espagnol et anglais, je suis passioné par le Web 3.0, en particulier par l'univers de la
               Blockchain <br>et des crypto-monnaies.
               <br>
