commit all the final changes

--- a/index.html
+++ b/index.html
@@ -114,37 +114,38 @@
         viewBox="0 0 16 16" style="width: 50px;height: 50px;float: left;">
         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
       </svg>
-      <h2>Conception et intégration en auto-didacte d'un site web personnel</h2><br><br>
+      <h2 class="text-center">Conception et intégration en auto-didacte d'un site web personnel</h2><br><br>
       <div class="grid">
-        <div>
-          <img src="./images/preview-rafa.png" alt="rafa" style="height: 300px;width: 600px;">
+        <div class="col">
+          <img src="./images/preview-rafa.png" alt="rafa">
         </div>
-        <div class="pt-4">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
-            viewBox="0 0 16 16" style="width: 30px;height: 30px;padding-left: 4px;margin-right:15px;float: left;">
-            <path
-              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-          </svg>
-          <a target="_blank" href="https://github.com/rafael-longeville/bootstrap-v5">Lien vers le repo GitHub</a>
-          <br>
-          <BR>
-          <p>Au cours de la réalisation de ce projet, j'ai pu apprendre des concepts HTML avancés, ainsi que
-            l'organisation et les diverses fonctionalités d'outils tels que :</p>
-          <ul>
-            <li>Bootstrap v5</li>
+        <div class="col">
+          <div class="pt-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+              viewBox="0 0 16 16" style="width: 30px;height: 30px;padding-left: 4px;margin-right:15px;float: left;">
+              <path
+                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+            </svg>
+            <a target="_blank" href="https://github.com/rafael-longeville/bootstrap-v5">Lien vers le repo GitHub</a>
             <br>
-            <li>Préprocesseur Sass</li>
-            <br>
-            <li>Git</li>
-          </ul>
-          <img src="./images/sass-css-git.jpg" alt="sass">
+            <BR>
+            <p>Au cours de la réalisation de ce projet, j'ai pu apprendre des concepts HTML avancés, ainsi que
+              l'organisation et les diverses fonctionalités d'outils tels que :</p>
+            <ul>
+              <li>Bootstrap v5</li>
+              <br>
+              <li>Le préprocesseur Sass</li>
+              <br>
+              <li>Git & GitHub Desktop</li>
+            </ul>
+            <img class="tab-photo" src="./images/sass-css-git.jpg" alt="sass">
+          </div>
         </div>
       </div>
-
-
-      <br><br>
-
     </div>
+
+
+    <br><br>
   </section>
   <br>
   <br>
