commit cv anchor

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
           <li class="nav-item">
             <a class="nav-link" href="#footer-btm">Contact</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#card-btm">Mon CV</a>
+          </li>
         </ul>
 
         <button onclick="window.open('tel:0660788474')" type="button" class="rounded-pill btn-rounded">06 60 78 84 74
@@ -378,7 +382,7 @@
 
 
       <!--Commencer la carte pour le CV-->
-      <div class="carde" id="card">
+      <div class="carde" id="card-btm">
         <div class="carde row text-center mb-2" style="margin-left: 0;margin-right: 0;">
           <h1 style="padding-left: 0;padding-right: 0;">Voici mon CV</h1>
           <div class="heading-line mb-1" style="padding-left: 0;padding-right: 0;"></div>
