commit spelling mistakes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <br>
               <br>Je souhaite participer à des projets Front-End en React.js pour améliorer mes compétences sur ce
               framework.<br><br>
-              Trilingue espagnol et anglais, je suis passioné par le Web 3.0, en particulier par l'univers de la
+              Trilingue espagnol et anglais, je suis passionné par le Web 3.0, en particulier par l'univers de la
               Blockchain <br>et des crypto-monnaies.
               <br>
               <br>
@@ -134,7 +134,7 @@
             <br>
             <BR>
             <p>Au cours de la réalisation de ce projet, j'ai pu apprendre des concepts HTML avancés, ainsi que
-              l'organisation et les diverses fonctionalités d'outils tels que :</p>
+              l'organisation et les diverses fonctionnalités d'outils tels que :</p>
             <ul>
               <li>Bootstrap v5</li>
               <br>
@@ -160,7 +160,7 @@
     <div class="l-container">
       <div class="text-center">
         <div class="l-container-first-card">
-          <h1 class="display-3 fw-bold">Mes éxpériences professionnelles</h1>
+          <h1 class="display-3 fw-bold">Mes expériences professionnelles</h1>
         </div>
       </div>
       <br>
@@ -182,7 +182,7 @@
                 <li>Découverte de la méthode Agile / SCRUM</li>
               </ul>
               <br>
-              <p>Au cours de cette période d'essai, j'ai réalisé plusieurs maintenances sur la partie front-end du
+              <p>Au cours de ce stage, j'ai réalisé plusieurs maintenances sur la partie front-end du
                 projet.
                 <br><br>
                 Principalement des corrections sur l'affichage mobile et bureau du site, mais également sur de la
@@ -218,7 +218,7 @@
                 précisement
                 selon les instructions données, puis les transmettre à mes
                 supérieurs.<br><br>
-                En parallèle à cette tâche, je réalisais des remboursements pour une aide auditive et je devais rendre
+                En parallèle de cette tâche, je réalisais des remboursements pour une aide auditive et je devais rendre
                 compte de toutes les transactions effectuées.
               </p>
               <img src="./images/logo-mgen.png" alt="mgen" style="width: 50px;height: 50px;">
@@ -299,7 +299,7 @@
                   <!-- Nom et poste du client  -->
                   <div class="testimonials__name">
                     <h3>Thomas Longeville</h3>
-                    <p class="fw-light">Responsable Comercial chez Optimis'ACTION</p>
+                    <p class="fw-light">Responsable Commercial chez Optimis'ACTION</p>
                   </div>
                 </div>
                 <!-- CAROUSEL ITEM 2 -->
